Add background color and basic button layout

--- a/index.html
+++ b/index.html
@@ -4,7 +4,30 @@
   <script src="./js/script.js"></script>
   <meta charset="utf-8">
   <title>Rock-Paper-Scissors</title>
+  <link rel="family-font" href="<link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,500;1,600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css">  
 </head>
-<body>    
+<body> 
+  <div class="heading">
+    <h1>ROCK, PAPER, SCISSORS</h1>  
+    <h3>The ultimate hand game</h3> 
+  </div>
+  <div class="container">
+    <div class="left-content">
+      <button><img class="user-rock" src="./icons/hand-back-fist-regular.svg" alt="A hand closed in a fist."></button>
+      <button><img class="user-paper" src="./icons/hand-regular.svg" alt="An open hand."></button>
+      <button><img class="user-scissors" src="./icons/hand-scissors-regular.svg" alt="A hand making a scissors figure."></button>
+    </div>
+    <div class="center-content">
+      <p>> some text</p>
+    </div>
+    <div class="right-content">
+      <button><img class="pc-rock"  src="./icons/hand-back-fist-solid.svg" alt="A hand closed in a fist."></button>
+      <button><img class="pc-paper" src="./icons/hand-solid.svg" alt="An open hand."></button>
+      <button><img class="pc-scissors" src="icons/hand-scissors-solid.svg" alt="A hand making a scissors figure."></button>
+    </div>
+  </div>
 </body>
 </html>
