Add game description and start button within center conter div

--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
       <button><img class="user-scissors" src="./icons/hand-scissors-regular.svg" alt="A hand making a scissors figure."></button>
     </div>
     <div class="center-content">
-      <p>> some text</p>
+      <p class="display-text">> Welcome to Rock, Paper and Scissors.</p>
+      <ul>
+        <li>Rock beats scissors.</li>
+        <li>Scissors beat paper.</li>
+        <li>Paper beats rock.</li>
+      </ul>
+      <p class="display-text"> Make your selection using the bottoms to your left.<br><br> The best out of five is the winner. </p>
+      <button id="start-btn">START</button>
     </div>
     <div class="right-content">
       <button><img class="pc-rock"  src="./icons/hand-back-fist-solid.svg" alt="A hand closed in a fist."></button>
