Add and style a div for display purposes once the game runs

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <button><img class="user-btn" id="scissors" src="./icons/hand-scissors-regular.svg" alt="A hand making a scissors figure."></button>
     </div>
     <div class="center-content">
+      <div class="center-top">
       <div class="intro-text">
       <p>> Welcome to Rock, Paper and Scissors.</p>
       <ul>
@@ -29,8 +30,9 @@
       </ul>
       <p>Make your selection using the bottoms to your left.<br><br> The best out of five is the winner.</p>
       </div>
-      <div class="display-text">
-        <p></p>
+      </div>
+      <div class="center-bottom">
+        <p> </p>
       </div>
     </div>
     <div class="right-content">
