Add DOM manipulation to display game features

--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
       </div>
       </div>
       <div class="center-bottom">
-        <p> </p>
+        <p id="user-selection"> </p>
+        <p id="pc-selection"> </p>
+        <p id="round-result"> </p>
+        <p id="user-score"> </p>
+        <p id="pc-score"> </p>
+        <p id="final-result"> </p>
       </div>
     </div>
     <div class="right-content">
