Refactor de code so that each button has an event listener that adds or removes classes to create animations

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   </div>
   <div class="container">
     <div class="left-content">
-      <button><img class="user-btn" id="rock" src="./icons/hand-back-fist-regular.svg" alt="A hand closed in a fist."></button>
-      <button><img class="user-btn" id="paper" src="./icons/hand-regular.svg" alt="An open hand."></button>
-      <button><img class="user-btn" id="scissors" src="./icons/hand-scissors-regular.svg" alt="A hand making a scissors figure."></button>
+      <button><img class="user-rock" src="./icons/hand-back-fist-regular.svg" alt="A hand closed in a fist."></button>
+      <button><img class="user-paper" src="./icons/hand-regular.svg" alt="An open hand."></button>
+      <button><img class="user-scissors" src="./icons/hand-scissors-regular.svg" alt="A hand making a scissors figure."></button>
     </div>
     <div class="center-content">
       <div class="center-top">
