Modify center div to display score and info about the round

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body> 
   <div class="heading">
     <h1>ROCK, PAPER, SCISSORS</h1>  
-    <h3>The ultimate hand game</h3> 
+    <h3>THE ULTIMATE HAND GAME</h3> 
+    <h3> ROCK BEATS SCISSORS / SCISSORS BEAT PAPER / PAPER BEATS ROCK </h3>
   </div>
   <div class="container">
     <div class="left-content">
@@ -21,23 +22,14 @@
     </div>
     <div class="center-content">
       <div class="center-top">
-      <div class="intro-text">
-      <p>> Welcome to Rock, Paper and Scissors.</p>
-      <ul>
-        <li>Rock beats scissors.</li>
-        <li>Scissors beat paper.</li>
-        <li>Paper beats rock.</li>
-      </ul>
-      <p>Make your selection using the bottoms to your left.<br><br> The best out of five is the winner.</p>
-      </div>
+        <h2> USER </h2>
+        <p class="round-score-user">SCORE: </p>
+        <div class="user-sect"></div>
       </div>
       <div class="center-bottom">
-        <p id="user-selection"> </p>
-        <p id="pc-selection"> </p>
-        <p id="round-result"> </p>
-        <p id="user-score"> </p>
-        <p id="pc-score"> </p>
-        <p id="final-result"> </p>
+        <h2> COMPUTER </h2>
+        <p class="round-score-pc">SCORE: </p>
+        <div class="pc-sect"></div>
       </div>
     </div>
     <div class="right-content">
