--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
       <button><img class="pc-scissors" src="icons/hand-scissors-solid.svg" alt="A hand making a scissors figure."></button>
     </div>
   </div>
+  <dialog class="modal"> 
+    <h1 style="text-align:center;"  class="game-summary"> </h1>
+      <div class="score-sect">
+        <h3 style="text-align: center;" class="score-summary-user"> </h3>
+        <h3 style="text-align: center;" class="score-summary-computer"> </h3>
+      </div>
+        <div class="refresh-sect">
+          <button onclick="history.go(0);" class="refresh">Play Again</button>
+        </div>  
+  </dialog>
 </body>
 <script src="./js/script.js"></script>
 </html>
