Modify user button animations and refactor code to make playRound more efficient

--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
 <body> 
   <div class="heading">
     <h1>ROCK, PAPER, SCISSORS</h1>  
-    <h3>THE ULTIMATE HAND GAME</h3> 
+    <h3>THE BEST OUT OF FIVE WINS</h3> 
     <h3> ROCK BEATS SCISSORS / SCISSORS BEAT PAPER / PAPER BEATS ROCK </h3>
   </div>
   <div class="container">
     <div class="left-content">
-      <button><img class="user-rock" src="./icons/hand-back-fist-regular.svg" alt="A hand closed in a fist."></button>
-      <button><img class="user-paper" src="./icons/hand-regular.svg" alt="An open hand."></button>
-      <button><img class="user-scissors" src="./icons/hand-scissors-regular.svg" alt="A hand making a scissors figure."></button>
+      <button><img class="user-btn" id="user-rock" src="./icons/hand-back-fist-regular.svg" alt="A hand closed in a fist."></button>
+      <button><img class="user-btn" id="user-paper" src="./icons/hand-regular.svg" alt="An open hand."></button>
+      <button><img class="user-btn" id="user-scissors" src="./icons/hand-scissors-regular.svg" alt="A hand making a scissors figure."></button>
     </div>
     <div class="center-content">
-      <div class="center-top">
+      <div class="center-user">
         <h2> USER </h2>
         <p class="round-score-user">SCORE: </p>
         <div class="user-sect"></div>
       </div>
-      <div class="center-bottom">
+      <div class="center-computer">
         <h2> COMPUTER </h2>
         <p class="round-score-pc">SCORE: </p>
         <div class="pc-sect"></div>
