Modify sub-heading to better illustrate the game's dinamics

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body> 
   <div class="heading">
     <h1>ROCK, PAPER, SCISSORS</h1>  
-    <h3>THE BEST OUT OF FIVE WINS</h3> 
+    <h3>THE FIRST TO REACH FIVE WINS</h3> 
     <h3> ROCK BEATS SCISSORS / SCISSORS BEAT PAPER / PAPER BEATS ROCK </h3>
   </div>
   <div class="container">
